--- a/Source/StackOverflow.Crawler/StackOverflow.Crawler.csproj
+++ b/Source/StackOverflow.Crawler/StackOverflow.Crawler.csproj
@@ -78,6 +78,16 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj">
+      <Project>{57de9a07-8b48-45ab-a5ff-5efd8007b225}</Project>
+      <Name>Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{a92d5c65-561c-48fa-86ea-98d3e2439c9a}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
