--- a/Source/Contracts/Contracts.csproj
+++ b/Source/Contracts/Contracts.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Pluralsight\PluralsightCourse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StackOverflow\BadgeCounts.cs" />
+    <Compile Include="StackOverflow\StackOverflowUser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
