--- a/Source/StackOverflow.Crawler/StackOverflow.Crawler.csproj
+++ b/Source/StackOverflow.Crawler/StackOverflow.Crawler.csproj
@@ -71,12 +71,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dependencies\DependencyModule.cs" />
+    <Compile Include="Entities\UserEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="UserRepository.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Contracts\Contracts.csproj">
@@ -87,7 +103,12 @@
       <Project>{a92d5c65-561c-48fa-86ea-98d3e2439c9a}</Project>
       <Name>Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\StacMan\StacMan.csproj">
+      <Project>{3c310ac6-6229-41fb-b33f-8381cf4fecbf}</Project>
+      <Name>StacMan</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
