--- a/Source/Github.Crawler/packages.config
+++ b/Source/Github.Crawler/packages.config
@@ -6,5 +6,6 @@
   <package id="Nelibur.Sword" version="3.1.6" targetFramework="net46" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="NLog" version="4.2.3" targetFramework="net46" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net46" />
   <package id="TinyMapper" version="2.0.8" targetFramework="net46" />
 </packages>
