--- a/Source/DataGenerator/DataGenerator.csproj
+++ b/Source/DataGenerator/DataGenerator.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\CourseEntity.cs" />
+    <Compile Include="Entities\RepositoryInfoEntity.cs" />
+    <Compile Include="Entities\UserEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataRepository.cs" />
