--- a/Source/Core/packages.config
+++ b/Source/Core/packages.config
@@ -3,4 +3,5 @@
   <package id="MongoDB.Bson" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net46" />
+  <package id="Nelibur.Sword" version="3.1.6" targetFramework="net46" />
 </packages>
