--- a/Source/MvcMinimalSample.Web/project.json
+++ b/Source/MvcMinimalSample.Web/project.json
@@ -6,10 +6,12 @@
     "Microsoft.AspNet.Mvc.DataAnnotations": "6.0.0-rc1-final",
     "Microsoft.AspNet.Mvc.Formatters.Json": "6.0.0-rc1-final",
     "Microsoft.AspNet.Hosting": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-rc1-final"
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-rc1-final",
+	"Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final"
   },
   "commands": {
-    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000"
+    "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5001",
+    "kestrel": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.Kestrel --server.urls http://localhost:5000"
   },
   "frameworks": {
     "dnx451": {},
