+ ubuntu command for dnx

--- a/Source/MvcMinimalSample.Web/project.json
+++ b/Source/MvcMinimalSample.Web/project.json
@@ -11,7 +11,8 @@
   },
   "commands": {
     "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5001",
-    "kestrel": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.Kestrel --server.urls http://localhost:5000"
+    "kestrel": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.Kestrel --server.urls http://localhost:5000",
+    "ubuntu": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.Kestrel --server.urls http://10.53.109.214:80"
   },
   "frameworks": {
     "dnx451": {},
