--- a/Source/DataGenerator/DataGenerator.csproj
+++ b/Source/DataGenerator/DataGenerator.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Nodes\GeekNode.cs" />
     <Compile Include="Nodes\LibNode.cs" />
     <Compile Include="NodeRow.cs" />
+    <Compile Include="Nodes\Node.cs" />
     <Compile Include="Nodes\TagNode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
