--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -60,6 +60,8 @@
     <Compile Include="MongoCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
+    <Compile Include="SubTagItem.cs" />
+    <Compile Include="TagItem.cs" />
     <Compile Include="Tags.cs" />
   </ItemGroup>
   <ItemGroup>
