--- a/Source/Core/packages.config
+++ b/Source/Core/packages.config
@@ -4,4 +4,5 @@
   <package id="MongoDB.Driver" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net46" />
   <package id="Nelibur.Sword" version="3.1.6" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
 </packages>
