--- a/Source/MakeHappy/App.config
+++ b/Source/MakeHappy/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <MakeHappy.Properties.Settings>
             <setting name="DataFilePath" serializeAs="String">
-                <value>..\..\..\Source\Web\data\data.json.js</value>
+                <value>..\..\..\Source\Web\data\data.json</value>
             </setting>
         </MakeHappy.Properties.Settings>
     </applicationSettings>
