--- a/Source/MakeHappy/Properties/Settings.settings
+++ b/Source/MakeHappy/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="DataFilePath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Development\GeekData\Source\Web\data\data.json.js</Value>
+      <Value Profile="(Default)">..\..\..\Source\Web\data\data.json</Value>
     </Setting>
   </Settings>
 </SettingsFile>
