* Worker added settings

--- a/Source/DataGenerator/App.config
+++ b/Source/DataGenerator/App.config
@@ -16,6 +16,12 @@
             <setting name="DatabaseName" serializeAs="String">
                 <value>GeekData</value>
             </setting>
+            <setting name="TopStackOverflowUsers" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="TopGithubRepositories" serializeAs="String">
+                <value>100</value>
+            </setting>
         </DataGenerator.Properties.Settings>
     </applicationSettings>
 </configuration>
