--- a/Source/DataGenerator/packages.config
+++ b/Source/DataGenerator/packages.config
@@ -4,5 +4,6 @@
   <package id="MongoDB.Driver" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net46" />
   <package id="Nelibur.Sword" version="3.1.6" targetFramework="net46" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="NLog" version="4.2.3" targetFramework="net46" />
 </packages>
