--- a/Source/DataGenerator/packages.config
+++ b/Source/DataGenerator/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Jil" version="2.13.0" targetFramework="net46" />
   <package id="MongoDB.Bson" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net46" />
   <package id="Nelibur.Sword" version="3.1.6" targetFramework="net46" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="NLog" version="4.2.3" targetFramework="net46" />
+  <package id="Sigil" version="4.5.0" targetFramework="net46" />
 </packages>
