--- a/Source/Core/packages.config
+++ b/Source/Core/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Jil" version="2.13.0" targetFramework="net46" />
   <package id="MongoDB.Bson" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver" version="2.2.3" targetFramework="net46" />
   <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net46" />
   <package id="Nelibur.Sword" version="3.1.6" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
+  <package id="Sigil" version="4.5.0" targetFramework="net46" />
 </packages>
